// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <Allergies /> should renders correctly and testing another methods 1`] = `
<section
  className="page-wrapper"
>
  <PluginBanner
    img={null}
    subTitle="Those things that your body reacts against , that you have an allergy to"
    title="Allergies"
    toRight={false}
  />
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="allergiesMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="allergiesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Allergies"
          />
          <PluginMainPanel
            columnNameSortBy="cause"
            emptyDataMessage="No allergies"
            headers={
              Array [
                Object {
                  "key": "cause",
                  "title": "Cause",
                  "width": "25%",
                },
                Object {
                  "key": "reaction",
                  "title": "Reaction",
                  "width": "55%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "20%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "Source ID",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Allergies /> should renders correctly and testing context and lifecycle componentWillReceiveProps 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="allergiesMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={false}
            name="allergiesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Allergies"
          />
          <PluginMainPanel
            columnNameSortBy="cause"
            emptyDataMessage="No allergies"
            headers={
              Array [
                Object {
                  "key": "cause",
                  "title": "Cause",
                  "width": "25%",
                },
                Object {
                  "key": "reaction",
                  "title": "Reaction",
                  "width": "55%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "20%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "Source ID",
                  "width": 0,
                },
              ]
            }
            id="acb0eaf2-d1df-4c7a-9382-619b31935f2b"
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <AllergiesDetail
          currentPanel="allergiesDetail"
          detail={
            Object {
              "author": "Dr Tony Shannon",
              "cause": 112,
              "causeCode": 111,
              "causeTerminology": 1239085,
              "dateCreated": 1507019519000,
              "originalComposition": "",
              "originalSource": "",
              "reaction": 112,
              "source": "ethercis",
              "sourceId": "acb0eaf2-d1df-4c7a-9382-619b31935f2b",
              "terminologyCode": 111,
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="allergiesDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="allergiesCreate"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Allergies /> should renders correctly when data take from Documents how "import" 1`] = `
<section
  className="page-wrapper"
>
  <PluginBanner
    img={null}
    subTitle="Those things that your body reacts against , that you have an allergy to"
    title="Allergies"
    toRight={false}
  />
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="allergiesMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="allergiesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Allergies"
          />
          <PluginMainPanel
            columnNameSortBy="cause"
            emptyDataMessage="No allergies"
            headers={
              Array [
                Object {
                  "key": "cause",
                  "title": "Cause",
                  "width": "25%",
                },
                Object {
                  "key": "reaction",
                  "title": "Reaction",
                  "width": "55%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "20%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "Source ID",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Allergies /> should renders correctly with allergiesDetail and testing Create Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="allergiesMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={false}
            name="allergiesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Allergies"
          />
          <PluginMainPanel
            columnNameSortBy="cause"
            emptyDataMessage="No allergies"
            headers={
              Array [
                Object {
                  "key": "cause",
                  "title": "Cause",
                  "width": "25%",
                },
                Object {
                  "key": "reaction",
                  "title": "Reaction",
                  "width": "55%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "20%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "Source ID",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <PluginCreate
          componentForm={
            <ReduxForm
              isSubmit={false}
            />
          }
          currentPanel="allergiesCreate"
          expandedPanel="all"
          isCreatePanelVisible={true}
          isImport={false}
          name="allergiesCreate"
          onCancel={[Function]}
          onExpand={[Function]}
          onGoBack={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="allergiesCreate"
          title="Create Allergy"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Allergies /> should renders correctly with allergiesDetail and testing Create Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="allergiesMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={false}
            name="allergiesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Allergies"
          />
          <PluginMainPanel
            columnNameSortBy="cause"
            emptyDataMessage="No allergies"
            headers={
              Array [
                Object {
                  "key": "cause",
                  "title": "Cause",
                  "width": "25%",
                },
                Object {
                  "key": "reaction",
                  "title": "Reaction",
                  "width": "55%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "20%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "Source ID",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <PluginCreate
          componentForm={
            <ReduxForm
              isSubmit={false}
            />
          }
          currentPanel="allergiesCreate"
          expandedPanel="all"
          isCreatePanelVisible={true}
          isImport={false}
          name="allergiesCreate"
          onCancel={[Function]}
          onExpand={[Function]}
          onGoBack={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="allergiesCreate"
          title="Create Allergy"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Allergies /> should renders correctly with allergiesDetail and testing Detail Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="allergiesMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={false}
            name="allergiesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Allergies"
          />
          <PluginMainPanel
            columnNameSortBy="cause"
            emptyDataMessage="No allergies"
            headers={
              Array [
                Object {
                  "key": "cause",
                  "title": "Cause",
                  "width": "25%",
                },
                Object {
                  "key": "reaction",
                  "title": "Reaction",
                  "width": "55%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "20%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "Source ID",
                  "width": 0,
                },
              ]
            }
            id="acb0eaf2-d1df-4c7a-9382-619b31935f2b"
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <AllergiesDetail
          currentPanel="allergiesDetail"
          detail={
            Object {
              "author": "Dr Tony Shannon",
              "cause": 111,
              "causeCode": 111,
              "causeTerminology": 1239085,
              "dateCreated": 1507019519000,
              "originalComposition": "",
              "originalSource": "",
              "reaction": 111,
              "source": "ethercis",
              "sourceId": "acb0eaf2-d1df-4c7a-9382-619b31935f2b",
              "terminologyCode": 111,
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="allergiesDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="allergiePanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Allergies /> should renders correctly with allergiesDetail and testing Detail Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section full-panel full-panel-details"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <AllergiesDetail
          currentPanel="allergiesDetail"
          detail={
            Object {
              "author": "Dr Tony Shannon",
              "cause": 111,
              "causeCode": 111,
              "causeTerminology": 1239085,
              "dateCreated": 1507019519000,
              "originalComposition": "",
              "originalSource": "",
              "reaction": 111,
              "source": "ethercis",
              "sourceId": "acb0eaf2-d1df-4c7a-9382-619b31935f2b",
              "terminologyCode": 111,
            }
          }
          editedPanel={Object {}}
          expandedPanel="allergiePanel"
          isSubmit={false}
          name="allergiesDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="allergiePanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Allergies /> should renders correctly with allergiesDetail and testing Detail Panel 3`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    />
  </div>
</section>
`;

exports[`Component <Allergies /> should renders correctly with empty store 1`] = `
<section
  className="page-wrapper"
>
  <PluginBanner
    img={null}
    subTitle="Those things that your body reacts against , that you have an allergy to"
    title="Allergies"
    toRight={false}
  />
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="allergiesMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="allergiesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Allergies"
          />
          <PluginMainPanel
            columnNameSortBy="cause"
            emptyDataMessage="No allergies"
            headers={
              Array [
                Object {
                  "key": "cause",
                  "title": "Cause",
                  "width": "25%",
                },
                Object {
                  "key": "reaction",
                  "title": "Reaction",
                  "width": "55%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "20%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "Source ID",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Allergies /> should renders correctly with forms error 1`] = `
<section
  className="page-wrapper"
>
  <PluginBanner
    img={null}
    subTitle="Those things that your body reacts against , that you have an allergy to"
    title="Allergies"
    toRight={false}
  />
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="allergiesMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="allergiesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Allergies"
          />
          <PluginMainPanel
            columnNameSortBy="cause"
            emptyDataMessage="No allergies"
            headers={
              Array [
                Object {
                  "key": "cause",
                  "title": "Cause",
                  "width": "25%",
                },
                Object {
                  "key": "reaction",
                  "title": "Reaction",
                  "width": "55%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "20%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "Source ID",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;
